# hippo.c-1

./: .env  .env.example  .gitignore  PROJECT.md  README.md  docker-compose.yml  hippo  main.py  pyproject.toml
.opencode/plans/: ingest_plan.md
core/: log.py
encode/: __init__.py  encode.py
encode/infer/: __init__.py  llm.py
encode/match/: __init__.py  embedder.py  retriever.py
encode/models/: __init__.py  fact.py  label.py  update.py
encode/triage/: __init__.py  patterns.py  rules.py
encode/update/: updater.py
ingest/: __init__.py  example.py  ingest.py
ingest/extractors/: __init__.py  base.py  hybrid.py  llm.py  rules.py
ingest/infer/: llm.py
ingest/learning/: __init__.py  feedback.py  patterns.py
ingest/match/: embedder.py  retriever.py
ingest/memory/: store.py
ingest/models/: __init__.py  fact.py  label.py  prompt.py
ingest/store/: __init__.py  client.py  memory.py
ingest/triage/: patterns.py  rules.py
ingest/update/: __init__.py  updater.py
memory/: README.md  check.py  client.py  inspect.py  schema.sql
plans/: 01-ARCHITECTURE-ANALYSIS.md  02-RECOMMENDATIONS.md  03-RECALL-SYSTEM-DESIGN.md  04-PRODUCTION-ROADMAP.md  05-IMPLEMENTATION-GUIDE.md  06-API-SPECIFICATION.md  07-PERFORMANCE-OPTIMIZATION.md  08-SECURITY-GUIDE.md  README.md
scripts/: local_db.sh
