[project]
name = "hippo-c-1"
version = "0.2.2"
description = "AI memory system with ingest, store, and index layers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg[binary,pool]>=3.1.18",
    "pgvector>=0.2.4",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core", "encode", "memory"]
